--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "@haxtheweb/i18n-manager": "^9.0.13",
         "@haxtheweb/simple-icon": "^9.0.27",
         "hax-dashboard": "file:",
-        "lit": "^3.2.0"
+        "lit": "^3.2.0",
+        "rollup-plugin-copy": "^3.5.0"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.16.4",
